small fix to createProduct()